<resources>
    <string name="app_name">Speechful</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="repeat_password_placeholder">Repeat Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_text_hint">I always wanted to say that..</string>
    <string name="save">Save</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="logout">Log out</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="update_profile">Update Info</string>
    <string-array name="languages">
        <item>English</item>
        <item>German</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Italian</item>

    </string-array>
</resources>