<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/speechful_logo"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textColor="@color/accentColor"
            android:textSize="25dp"
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="100dp"
            >

            <TextView
                android:id="@+id/profile_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                />

            <EditText
                android:id="@+id/profile_name"
                android:layout_width="235dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="3"
                android:background="@drawable/edit_text_style"
                android:backgroundTint="@color/gray"
                android:text="@string/name"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp">

          <TextView
    android:id="@+id/profile_email_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/email_label"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"
    android:layout_marginLeft="30dp"
    android:layout_weight="1"
    android:layout_gravity="center"
    />

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_weight="3"
        android:background="@drawable/edit_text_style"
        android:backgroundTint="@color/gray"
        android:text="@string/name"
        android:layout_gravity="center"
        android:paddingLeft="15dp"
        android:layout_marginRight="20dp"/>
</LinearLayout>
        <Button
            android:id="@+id/update_profile_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/accentColor"
            android:layout_marginTop="50dp"
            android:text="@string/update_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_email_label" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:backgroundTint="@color/accentColor"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_email_label" />

    </LinearLayout>
</FrameLayout>